src/Models/ContractItem.css
.right {
  float: right;
}
/* drop down for contracts */
.accordion {
  background:  #ccc;
  color: #444;
  cursor: pointer;
  padding: 2%;
  width: 100%;
  border: none;
  text-align: center;
  outline: none;
  margin: 2%;
  margin-left: 0px;
  margin-top: 0px;
  margin-bottom: 0px;
  margin-right: 0px;
  transition: 0.4s;
  font-size: 180%;
}

/*
.main{
    text-align: center;
}
*/

.contractText{
font-size: 80%;

}
.switch {
  margin-right: 4%;
}

.active, .accordion:hover {
  background-color: #ccc;
}

.panel {
  width: 100%;
  /* must match .accordion's width */
  padding: 3%;
  font-size: 200%;
  display: none;
  overflow: hidden;
}

.title{
  padding: 1%;
}

.active+.panel {
  display: block;
}

.accordion:after {
  content: '\02795';
  color: #777;
  float: right;
  /*margin-left: 4%; read below*/
}

.active:after {
  content: "\2796";
  /*margin-left: 0%; no needed. just shifts text when toggled*/
}

.switch {
  position: relative;
  display: inline-block;
  width: 14%;
  height: 1.07em;
  /* cant turn this into % */
  align: center;
  float: right;
}

.switch input {
  display: none
}

.slider {
  position: absolute;
  cursor: pointer;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: #ccc;
  -webkit-transition: .3s;
  transition: .3s;
  margin-right: 10%
}

.slider:before {
  position: absolute;
  content: "";
  height: .82em;
  width: .82em;
  left: .126em;
  bottom: .126em;
  background-color: white;
  -webkit-transition: .3s;
  transition: .3s;
}

input:checked+.slider {
  background-color: #5CA2D5;
}

input:focus+.slider {
  box-shadow: 0 0 1px #2196F3;
}

input:checked+.slider:before {
  -webkit-transform: translateX(1.4em);
  -ms-transform: translateX(1.82em);
  transform: translateX(1.4em);
}

.slider.round {
  border-radius: 1.9em;
}

.slider.round:before {
  border-radius: 50%;
}

.submit {
  font-size: .65em;
  border-radius: 2em;
  border: none;
  color: white;
  padding: .7em .9em;
  cursor: pointer;
  background-color: #81E870;
  margin: 3%;
}

.submit:hover {
  background-color: #70D642
}

.close {
  font-size: .65em;
  border-radius: 2em;
  border: none;
  color: white;
  padding: .7em .9em;
  cursor: pointer;
  background-color: #ff704d;
  margin: 3%;
}

.buttonContainer {
  text-align: center;
  display: flex;
  justify-content: center;
  align-items: center;
  height: 100%;
}

.close:hover {
  background-color: #ff5c33;
}

/* messes up past 260 px width but what screen is that tiny? 300 is smallest avg */
.buttonByn{
  font-size: 50%;
  padding: 2%;
  margin: 1%;
}

.switch {
  width: 15%;
  /* need these hardcoded */
  min-width: 2.7em;
  max-width: 2.7em;
  margin: 0;
}



@media screen and (max-width: 800px) {


  .panel{
    text-align: left;
    width: 100%;
  }

  .content {
    width: 100%;
  }

  .accordion {
    width: 100%;
  }

  .contractText{
    font-size: 55%;
  }

  .switch {
    width: 15%;
    /* need these hardcoded */
    min-width: 2.6em;
    max-width: 2.6em;
    margin: 0;
  }

  .allContracts {
    width: 100%;
  }

.slider{
  height: 100%;
  margin: 0;
}

input:checked+.slider:before{
transform: translateX(1.5em);

}
/*
.buttonWrapper {
    position: absolute;
    width: 100%;
    height: 100px;
    border: solid 1px green;
}
.buttonWrapper:hover {
    transform: translateX(100%);
}*/
/*
input:checked+.slider:before {
  transform: translateX(180%);
}
*//*
.slider::before{
  transform: translate(100%);
}*/

}
/* OK SUMIN ILL get rid of mobile view!
 biggest viewport as of now is 480. note 5, lg g5, 1+3,
should check new iphone to double check though. biggest i phone was 8 plus at 414
@media screen and (max-width: 480px) {
  .accordion {
    width: 100%;
  }

  .panel {
    width: 95%;
  }

  .switch {
    width: 23%;
  }
}
*/

